--- a/DemoApp/DemoApp/Views/Home/Index.cshtml
+++ b/DemoApp/DemoApp/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model DemoApp.Models.Employee;
+﻿@model DemoApp.ViewModel.HomeIndexViewModel
 
 @{
     Layout = null;
@@ -12,16 +12,16 @@
     <title>Index</title>
 </head>
 <body>
-    <h3>@ViewBag.PageTitle</h3>
+    <h3>@Model.PageTitle</h3>
 
     <div>
-        Name:@Model.Name
+        Name:@Model.Employee.Name
     </div>
     <div>
-        Email:@Model.Email
+        Email:@Model.Employee.Email
     </div>
     <div>
-        Department:@Model.Department
+        Department:@Model.Employee.Department
     </div>
 </body>
 </html>
