Part-28: Use of Layout.cshtml

--- a/DemoApp/DemoApp/Views/Home/Index.cshtml
+++ b/DemoApp/DemoApp/Views/Home/Index.cshtml
@@ -1,27 +1,20 @@
 ﻿@model DemoApp.ViewModel.HomeIndexViewModel
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Index";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <h3>@Model.PageTitle</h3>
+<h3>@Model.PageTitle</h3>
 
-    <div>
-        Name:@Model.Employee.Name
-    </div>
-    <div>
-        Email:@Model.Employee.Email
-    </div>
-    <div>
-        Department:@Model.Employee.Department
-    </div>
-</body>
-</html>
+<div>
+    Name:@Model.Employee.Name
+</div>
+<div>
+    Email:@Model.Employee.Email
+</div>
+<div>
+    Department:@Model.Employee.Department
+</div>
+
