--- a/DemoApp/DemoApp/Views/Home/Details.cshtml
+++ b/DemoApp/DemoApp/Views/Home/Details.cshtml
@@ -1,38 +1,28 @@
-﻿@model  IEnumerable<DemoApp.Models.Employee>
+﻿@model IEnumerable<DemoApp.Models.Employee>
+
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Details";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Department</th>
-            </tr>
-        </thead>
-        <tbody>
-            @{
-                foreach (var item in Model)
-                {
-                        <tr>
-                            <td>@item.Id</td>
-                            <td>@item.Name</td>
-                            <td>@item.Department</td>
-                        </tr>
-                }
+<table>
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Department</th>
+        </tr>
+    </thead>
+    <tbody>
+        @{
+            foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.Id</td>
+                    <td>@item.Name</td>
+                    <td>@item.Department</td>
+                </tr>
             }
-        </tbody>
-          
-    </table>
-    
-</body>
-</html>
+        }
+    </tbody>
+</table>
